--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "@bemedev/basifun": "^0.1.4",
     "@bemedev/boolean-recursive": "^0.0.3",
     "@bemedev/decompose": "^0.7.3",
+    "@bemedev/monadisk": "^0.0.7",
+    "@bemedev/sleep": "^0.1.2",
     "@bemedev/types": "^0.1.3",
     "clone-deep": "^4.0.1",
     "deepmerge-ts": "^7.1.4",
