--- a/package.json
+++ b/package.json
@@ -91,11 +91,6 @@
     "prettier": "^3.4.2",
     "pretty-quick": "^4.0.0",
     "rollup": "^4.32.1",
-    "rollup-plugin-circular-dependencies": "^1.1.2",
-    "rollup-plugin-node-externals": "^8.0.0",
-    "rollup-plugin-tsc-alias": "^1.1.2",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "tsd": "^0.31.2",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
@@ -106,10 +101,12 @@
     "@bemedev/boolean-recursive": "^0.0.3",
     "@bemedev/decompose": "^0.7.3",
     "@bemedev/monadisk": "^0.0.7",
+    "@bemedev/rollup-config": "^0.1.1",
     "@bemedev/sleep": "^0.1.2",
     "@bemedev/types": "^0.1.3",
     "clone-deep": "^4.0.1",
     "deepmerge-ts": "^7.1.4",
+    "fast-deep-equal": "^3.1.3",
     "ts-deepmerge": "^7.0.2"
   }
 }
