--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "include": ["src/**/*", "src/vitest..common.ts", "src/.vitest.ts"],
   "compilerOptions": {
+    "module": "esnext",
+    "module": "esnext",
     "lib": ["dom", "esnext"],
     "importHelpers": true,
     "target": "ESNext",
