--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
     "@bemedev/types": "^0.1.3",
     "clone-deep": "^4.0.1",
     "deepmerge-ts": "^7.1.4",
-    "fast-deep-equal": "^3.1.3",
-    "ts-deepmerge": "^7.0.2"
+    "fast-deep-equal": "^3.1.3"
   }
 }
