feat: rename to app-ts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bemedev/repro-ts-full",
+  "name": "@bemedev/app-ts",
   "version": "0.0.1",
   "description": "A reprogramming method to code better",
   "author": {
