--- a/package.json
+++ b/package.json
@@ -86,14 +86,14 @@
     "@vitest/coverage-v8": "^3.0.6",
     "eslint": "^9.20.1",
     "glob": "^11.0.1",
-    "globals": "^15.15.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "onchange": "^7.1.0",
     "prettier": "^3.5.1",
     "pretty-quick": "^4.0.0",
     "rollup": "^4.34.8",
     "tslib": "^2.8.1",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6"
   },
@@ -101,6 +101,7 @@
     "@bemedev/basifun": "^0.2.0",
     "@bemedev/boolean-recursive": "^0.0.3",
     "@bemedev/decompose": "^0.8.0",
+    "@bemedev/interval2": "^0.1.1",
     "@bemedev/monadisk": "^0.0.7",
     "@bemedev/rollup-config": "^0.1.1",
     "@bemedev/sleep": "^0.1.2",
@@ -108,5 +109,10 @@
     "clone-deep": "^4.0.1",
     "deepmerge-ts": "^7.1.4",
     "fast-deep-equal": "^3.1.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
