--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish-beta
 on:
   push:
     branches:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish:
-    name: Publish
+    name: Publish-beta
     runs-on: ubuntu-latest
 
     steps:
