feat: ajout de nouvelles machines et réorganisation des exports de données

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "paths": {
       "~types": ["src/types/index.ts"],
       "~fixtures": ["src/fixtures.ts"],
+      "~fixturesData": ["src/interpreters/__tests__/data/index.ts"],
       "~utils": ["src/utils/index.ts"],
       "~constants": ["src/constants/index.ts"],
       "~promises": ["src/promises/index.ts"],
