--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bemedev/app-ts",
-  "version": "0.1.11-canary",
+  "version": "0.1.12-canary",
   "description": "A reprogramming method to code better",
   "author": {
     "email": "bri_lvi@icloud.com",
@@ -108,7 +108,8 @@
     "@bemedev/types": "^0.1.5",
     "clone-deep": "^4.0.1",
     "deepmerge-ts": "^7.1.5",
-    "fast-deep-equal": "^3.1.3"
+    "fast-deep-equal": "^3.1.3",
+    "nanoid": "^5.1.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
