--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bemedev/app-ts",
-  "version": "0.1.12-canary",
+  "version": "0.1.11-beta",
   "description": "A reprogramming method to code better",
   "author": {
     "email": "bri_lvi@icloud.com",
