--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "prettier": "prettier --write \"src/**/*.{ts,tsx}\" --log-level silent",
     "rinit": "pnpm run rm && pnpm run config",
     "rinit:off": "pnpm run rm && pnpm run config:off",
-    "rm": "pnpm rm -rf node_modules pnpm-lock.yaml",
+    "rm": "del /s /q node_modules pnpm-lock.yaml",
     "rollup": "rollup -c",
     "test": "pnpm run test:coverage --no-coverage",
     "test:coverage": "vitest run",
