--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "prettier": "prettier --write \"src/**/*.{ts,tsx}\" --log-level silent",
     "rinit": "pnpm run rm && pnpm run config",
     "rinit:off": "pnpm run rm && pnpm run config:off",
-    "rm": "del /s /q node_modules pnpm-lock.yaml",
+    "rm": "rimraf ./node_modules ./pnpm-lock.yaml",
     "rollup": "rollup -c",
     "test": "pnpm run test:coverage --no-coverage",
     "test:coverage": "vitest run",
@@ -92,6 +92,7 @@
     "onchange": "^7.1.0",
     "prettier": "^3.5.3",
     "pretty-quick": "^4.1.1",
+    "rimraf": "^6.0.1",
     "rollup": "^4.37.0",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
