--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bemedev/app-ts",
   "version": "0.1.22-beta",
-  "description": "A reprogramming method to code better",
+  "description": "A reprogramming method to code better //TODO: Add exports with github copilot",
   "author": {
     "email": "bri_lvi@icloud.com",
     "name": "chlbri",
