--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bemedev/app-ts",
-  "version": "0.1.23-beta",
+  "version": "0.1.23",
   "description": "A reprogramming method to code better //TODO: Add exports with github copilot",
   "author": {
     "email": "bri_lvi@icloud.com",
