feat: ajout de nouvelles fonctionnalités de résolution de chemins et tests associés
Ajout de types Tragets, GetChildren and GetParents for addresse
 et de la function resolve

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "sourceMap": true,
     "rootDir": "./src",
+    "noErrorTruncation": true,
     "outDir": "./lib",
     "resolveJsonModule": true,
     "strict": true,
