--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,24 +27,24 @@
     "declarationMap": true,
     "baseUrl": ".",
     "paths": {
-      "~types": ["src/types/index.ts"],
-      "~fixtures": ["src/fixtures.ts"],
-      "~fixturesData": ["src/interpreters/__tests__/data/index.ts"],
-      "~utils": ["src/utils/index.ts"],
-      "~constants": ["src/constants/index.ts"],
-      "~promises": ["src/promises/index.ts"],
-      "~children": ["src/children/index.ts"],
-      "~delays": ["src/delays/index.ts"],
-      "~states": ["src/states/index.ts"],
-      "~interpreters": ["src/interpreters/index.ts"],
-      "~interpreter": ["src/interpreters/interpreter.ts"],
-      "~guards": ["src/guards/index.ts"],
-      "~actions": ["src/actions/index.ts"],
-      "~events": ["src/events/index.ts"],
-      "~transitions": ["src/transitions/index.ts"],
-      "~machine": ["src/machine/machine.ts"],
-      "~machines": ["src/machine/index.ts"],
-      "~config": ["src/config/index.ts"]
+      "#types": ["src/types/index.ts"],
+      "#fixtures": ["src/interpreters/__tests__/fixtures.ts"],
+      "#fixturesData": ["src/interpreters/__tests__/data/index.ts"],
+      "#utils": ["src/utils/index.ts"],
+      "#constants": ["src/constants/index.ts"],
+      "#promises": ["src/promises/index.ts"],
+      "#children": ["src/children/index.ts"],
+      "#delays": ["src/delays/index.ts"],
+      "#states": ["src/states/index.ts"],
+      "#interpreters": ["src/interpreters/index.ts"],
+      "#interpreter": ["src/interpreters/interpreter.ts"],
+      "#guards": ["src/guards/index.ts"],
+      "#actions": ["src/actions/index.ts"],
+      "#events": ["src/events/index.ts"],
+      "#transitions": ["src/transitions/index.ts"],
+      "#machine": ["src/machine/machine.ts"],
+      "#machines": ["src/machine/index.ts"],
+      "#config": ["src/config/index.ts"]
     }
   }
 }
