--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,11 @@ jobs:
       - name: lint
         run: pnpm run lint
 
+      - name: Build
+        run: pnpm run build
+
       - name: Test
-        run: pnpm run test
+        run: pnpm run test:only
+
+      - name: Cleanup
+        run: pnpm run posttest
