--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
     "rollup": "^4.52.0",
+    "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
