_NO_CI, temporary advancement

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
       "#actions": ["src/actions/index.ts"],
       "#events": ["src/events/index.ts"],
       "#transitions": ["src/transitions/index.ts"],
+      "#emitters": ["src/emitters/index.ts"],
       "#machine": ["src/machine/machine.ts"],
       "#machines": ["src/machine/index.ts"],
       "#config": ["src/config/index.ts"]
