--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -7,6 +7,13 @@ on:
   schedule:
     - cron: '0 9 1 * *'
 
+# Ajouter les permissions au niveau du workflow
+permissions:
+  contents: write
+  actions: read
+  pull-requests: write
+  issues: write
+
 jobs:
   admin-update:
     name: Execute CI Admin Scripts
@@ -69,10 +76,11 @@ jobs:
         with:
           message:
             'chore(admin): Execute monthly admin maintenance scripts'
-          author_name: 'GitHub Actions'
-          author_email: 'actions@github.com'
+          author_name: '@chlbri'
+          author_email: 'bri_lvi@icloud.com'
           add: '.'
-          default_author: github_actions
+          default_author: Charles-Lévi BRI
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   cleanup:
     name: Cleanup Artifacts
