Change default author for admin maintenance scripts

--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -79,7 +79,7 @@ jobs:
           author_name: '@chlbri'
           author_email: 'bri_lvi@icloud.com'
           add: '.'
-          default_author: Charles-Lévi BRI
+          default_author: github_actions
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
   cleanup:
