--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -81,29 +81,41 @@ jobs:
           add: '.'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+  
   cleanup:
     name: Cleanup Artifacts
     runs-on: ubuntu-latest
     needs: [admin-update, commit-changes]
     if: always() && needs.admin-update.outputs.changes-detected == 'true'
+    permissions:
+      actions: write
+      contents: read
 
     steps:
       - name: Delete artifacts
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.runId,
-            });
+            try {
+              const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: context.runId,
+              });
 
-            for (const artifact of artifacts.data.artifacts) {
-              if (artifact.name === 'updated-workspace') {
-                await github.rest.actions.deleteArtifact({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  artifact_id: artifact.id,
-                });
+              for (const artifact of artifacts.data.artifacts) {
+                if (artifact.name === 'updated-workspace') {
+                  console.log(`Deleting artifact: ${artifact.name} (ID: ${artifact.id})`);
+                  await github.rest.actions.deleteArtifact({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    artifact_id: artifact.id,
+                  });
+                  console.log(`Successfully deleted artifact: ${artifact.name}`);
+                }
               }
+            } catch (error) {
+              console.log(`Error during cleanup: ${error.message}`);
+              // Ne pas faire échouer le workflow pour un problème de nettoyage
             }
