Comment out changes-detected condition in workflow
Commented out the condition for detecting changes.

Signed-off-by: chlbri <51156116+chlbri@users.noreply.github.com>

--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -56,7 +56,7 @@ jobs:
     name: Commit Changes
     runs-on: ubuntu-latest
     needs: admin-update
-    if: needs.admin-update.outputs.changes-detected == 'true'
+    # if: needs.admin-update.outputs.changes-detected == 'true'
 
     steps:
       - name: Checkout repository
