--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - name: Checkout pnpm repo
-        uses: 'chlbri/pnpmi-action@main'
+        uses: chlbri/pnpmi-action@main
 
       - name: Execute CI Admin
         run: pnpm run ci:admin
@@ -28,8 +28,11 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          echo "changes=true" >> $GITHUB_OUTPUT
-        
+          if git diff --quiet && git diff --cached --quiet; then
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Upload workspace
         if: steps.check-changes.outputs.changes == 'true'
@@ -47,10 +50,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: admin-update
     if: needs.admin-update.outputs.changes-detected == 'true'
-    permissions:
-      contents: write
     outputs:
-      new-version: ${{ steps.bump-version.outputs.newTag }}
+      newTag: ${{ steps.bump-version.outputs.newTag }}
 
     steps:
       - name: Checkout repository
@@ -123,8 +124,43 @@ jobs:
           author_email: bri_lvi@icloud.com
           commit: --signoff
           add: '.'
-          tag: 'v${{ needs.bump-version.outputs.new-version }}'
+          tag: 'v${{ needs.bump-version.outputs.newTag }}'
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload workspace
+        uses: actions/upload-artifact@v4
+        with:
+          name: ready-workspace
+          path: |
+            .
+            !node_modules
+            !.git
+          retention-days: 1
+
+  publish:
+    name: Publish to NPM
+    runs-on: ubuntu-latest
+    needs: [commit-changes, admin-update]
+    if: needs.admin-update.outputs.changes-detected == 'true'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
+      - name: Download workspace with version
+        uses: actions/download-artifact@v4
+        with:
+          name: ready-workspace
+          path: .
+
+      - uses: chlbri/npm-publish-action@main
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          access: public
+          strategy: upgrade
 
   cleanup:
     name: Cleanup Artifacts
@@ -149,7 +185,7 @@ jobs:
               });
 
               for (const artifact of artifacts.data.artifacts) {
-                if (artifact.name === 'updated-workspace' || artifact.name === 'updated-workspace-with-version') {
+                if (artifact.name === 'updated-workspace' || artifact.name === 'updated-workspace-with-version' || artifact.name === 'ready-workspace') {
                   console.log(`Deleting artifact: ${artifact.name} (ID: ${artifact.id})`);
                   await github.rest.actions.deleteArtifact({
                     owner: context.repo.owner,
