--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -28,7 +28,11 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          echo "changes=true" >> $GITHUB_OUTPUT
+          if git diff --quiet && git diff --cached --quiet; then
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Upload workspace
         if: steps.check-changes.outputs.changes == 'true'
@@ -161,7 +165,7 @@ jobs:
   cleanup:
     name: Cleanup Artifacts
     runs-on: ubuntu-latest
-    needs: [admin-update, bump-version, commit-changes]
+    needs: [admin-update, bump-version, commit-changes, publish]
     if: needs.admin-update.outputs.changes-detected == 'true'
     permissions:
       actions: write
