--- a/.github/workflows/admin-update.yml
+++ b/.github/workflows/admin-update.yml
@@ -28,7 +28,11 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          echo "changes=true" >> $GITHUB_OUTPUT
+          if git diff --quiet && git diff --cached --quiet; then
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Upload workspace
         if: steps.check-changes.outputs.changes == 'true'
@@ -140,17 +144,17 @@ jobs:
     if: needs.admin-update.outputs.changes-detected == 'true'
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
+      - name: Checkout pnpm repo
+        uses: chlbri/pnpmi-action@main
 
       - name: Download workspace with version
         uses: actions/download-artifact@v4
         with:
           name: ready-workspace
           path: .
+
+      - name: Build
+        run: pnpm run build
 
       - uses: chlbri/npm-publish-action@main
         with:
