--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -28,7 +28,11 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          echo "changes=true" >> $GITHUB_OUTPUT
+          if git diff --quiet && git diff --cached --quiet; then
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Upload workspace
         if: steps.check-changes.outputs.changes == 'true'
