--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -28,11 +28,7 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          if git diff --quiet && git diff --cached --quiet; then
-            echo "changes=false" >> $GITHUB_OUTPUT
-          else
-            echo "changes=true" >> $GITHUB_OUTPUT
-          fi
+          echo "changes=true" >> $GITHUB_OUTPUT
 
       - name: Upload workspace
         if: steps.check-changes.outputs.changes == 'true'
@@ -127,16 +123,6 @@ jobs:
           tag: 'v${{ needs.bump-version.outputs.newTag }}'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload workspace
-        uses: actions/upload-artifact@v4
-        with:
-          name: ready-workspace
-          path: |
-            .
-            !node_modules
-            !.git
-          retention-days: 1
-
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
@@ -146,12 +132,6 @@ jobs:
     steps:
       - name: Checkout pnpm repo
         uses: chlbri/pnpmi-action@main
-
-      - name: Download workspace with version
-        uses: actions/download-artifact@v4
-        with:
-          name: ready-workspace
-          path: .
 
       - name: Build
         run: pnpm run build
@@ -165,7 +145,7 @@ jobs:
   cleanup:
     name: Cleanup Artifacts
     runs-on: ubuntu-latest
-    needs: [admin-update, bump-version, commit-changes, publish]
+    needs: [admin-update, bump-version, commit-changes]
     if: needs.admin-update.outputs.changes-detected == 'true'
     permissions:
       actions: write
@@ -185,7 +165,7 @@ jobs:
               });
 
               for (const artifact of artifacts.data.artifacts) {
-                if (artifact.name === 'updated-workspace' || artifact.name === 'updated-workspace-with-version' || artifact.name === 'ready-workspace') {
+                if (artifact.name === 'updated-workspace' || artifact.name === 'updated-workspace-with-version') {
                   console.log(`Deleting artifact: ${artifact.name} (ID: ${artifact.id})`);
                   await github.rest.actions.deleteArtifact({
                     owner: context.repo.owner,
