--- a/.github/workflows/publish-NPM.yml
+++ b/.github/workflows/publish-NPM.yml
@@ -11,23 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4.1.6
+      - name: Checkout pnpm repo
+        uses: chlbri/pnpmi-action@main
 
-      - name: Setup node for publication
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          always-auth: true
-          registry-url: 'https://registry.npmjs.org'
-          scope: '@bemedev'
+      - name: Build
+        run: pnpm run build
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        id: pnpm-install
+      - uses: chlbri/npm-publish-action@main
         with:
-          version: 10
-          run_install: false
+          token: ${{ secrets.NPM_TOKEN }}
+          access: public
+          strategy: upgrade
 
       - name: Get pnpm store directory
         id: pnpm-cache
