--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -28,7 +28,11 @@ jobs:
       - name: Check for changes
         id: check-changes
         run: |
-          echo "changes=true" >> $GITHUB_OUTPUT
+          if git diff --quiet && git diff --cached --quiet; then
+            echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Upload workspace
         if: steps.check-changes.outputs.changes == 'true'
@@ -123,6 +127,16 @@ jobs:
           tag: 'v${{ needs.bump-version.outputs.newTag }}'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Upload workspace
+        uses: actions/upload-artifact@v4
+        with:
+          name: ready-workspace
+          path: |
+            .
+            !node_modules
+            !.git
+          retention-days: 1
+
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
@@ -132,6 +146,12 @@ jobs:
     steps:
       - name: Checkout pnpm repo
         uses: chlbri/pnpmi-action@main
+
+      - name: Download workspace with version
+        uses: actions/download-artifact@v4
+        with:
+          name: ready-workspace
+          path: .
 
       - name: Build
         run: pnpm run build
@@ -145,7 +165,7 @@ jobs:
   cleanup:
     name: Cleanup Artifacts
     runs-on: ubuntu-latest
-    needs: [admin-update, bump-version, commit-changes]
+    needs: [admin-update, bump-version, commit-changes, publish]
     if: needs.admin-update.outputs.changes-detected == 'true'
     permissions:
       actions: write
@@ -165,7 +185,7 @@ jobs:
               });
 
               for (const artifact of artifacts.data.artifacts) {
-                if (artifact.name === 'updated-workspace' || artifact.name === 'updated-workspace-with-version') {
+                if (artifact.name === 'updated-workspace' || artifact.name === 'updated-workspace-with-version' || artifact.name === 'ready-workspace') {
                   console.log(`Deleting artifact: ${artifact.name} (ID: ${artifact.id})`);
                   await github.rest.actions.deleteArtifact({
                     owner: context.repo.owner,
