--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bemedev/app-ts",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A reprogramming method to code better",
   "author": {
     "email": "bri_lvi@icloud.com",
@@ -68,7 +68,7 @@
     "test:type": "pnpm run test:coverage -c \"vitest.config.type.ts\" --no-coverage",
     "test:type:watch": "vitest -c \"vitest.config.type.ts\"",
     "test:watch": "vitest",
-    "upgrade": "pnpm upgrade --latest"
+    "upgrade": "pnpm dlx @bemedev/upgrade-npm-package"
   },
   "devDependencies": {
     "@bemedev/build-tests": "^0.1.2",
@@ -78,24 +78,24 @@
     "@bemedev/vitest-exclude": "^0.1.1",
     "@bemedev/vitest-extended": "^1.5.3",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.37.0",
     "@types/clone-deep": "^4.0.4",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.6.2",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "glob": "^11.0.3",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "onchange": "^7.1.0",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
-    "rollup": "^4.52.3",
+    "rollup": "^4.52.4",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   },
   "dependencies": {
