feat: Refactor typings and machine configurations
- Updated machine1.machine.ts to utilize inferT for typing intermediary and asset.
- Modified machine21.ts to use typings.litterals and simplified data typing.
- Enhanced machine.real.test.ts with improved type inference and removed unused types.
- Introduced new typings for machine1.machine.typings.ts to define intermediary, asset, and other structures.
- Created main.data.ts and main.machine.gen.ts for better organization of constants and generated types.
- Implemented main.machine.ts with comprehensive state management and actions.
- Developed main.test.ts and main.ts for testing and service building.
- Expanded typings.test.ts to cover TupleCustom typing transformations.

_NO_CI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
 {
-  "include": [
-    "src/**/*",
-    "src/.vitest.ts"
-  ],
+  "include": ["src/**/*", "src/.vitest.ts"],
   "compilerOptions": {
     "module": "esnext",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "importHelpers": true,
     "target": "ESNext",
     "declaration": true,
@@ -23,9 +17,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "moduleResolution": "Bundler",
-    "types": [
-      "vitest/globals"
-    ],
+    "types": ["vitest/globals", "node"],
     "jsx": "react",
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -35,66 +27,26 @@
     "declarationMap": true,
     "baseUrl": ".",
     "paths": {
-      "~types": [
-        "src/types/index.ts"
-      ],
-      "#fixtures": [
-        "src/interpreters/__tests__/fixtures.ts"
-      ],
-      "#fixturesData": [
-        "src/interpreters/__tests__/data/index.ts"
-      ],
-      "#utils": [
-        "src/utils/index.ts"
-      ],
-      "#constants": [
-        "src/constants/index.ts"
-      ],
-      "#promises": [
-        "src/promises/index.ts"
-      ],
-      "#children": [
-        "src/children/index.ts"
-      ],
-      "#delays": [
-        "src/delays/index.ts"
-      ],
-      "#states": [
-        "src/states/index.ts"
-      ],
-      "#interpreters": [
-        "src/interpreters/index.ts"
-      ],
-      "#interpreter": [
-        "src/interpreters/interpreter.ts"
-      ],
-      "#guards": [
-        "src/guards/index.ts"
-      ],
-      "#actions": [
-        "src/actions/index.ts"
-      ],
-      "#events": [
-        "src/events/index.ts"
-      ],
-      "#transitions": [
-        "src/transitions/index.ts"
-      ],
-      "#emitters": [
-        "src/emitters/index.ts"
-      ],
-      "#machine": [
-        "src/machine/machine.ts"
-      ],
-      "#machines": [
-        "src/machine/index.ts"
-      ],
-      "#config": [
-        "src/config/index.ts"
-      ],
-      "#bemedev/*": [
-        "src/libs/bemedev/*"
-      ]
+      "~types": ["src/types/index.ts"],
+      "#fixtures": ["src/interpreters/__tests__/fixtures.ts"],
+      "#fixturesData": ["src/interpreters/__tests__/data/index.ts"],
+      "#utils": ["src/utils/index.ts"],
+      "#constants": ["src/constants/index.ts"],
+      "#promises": ["src/promises/index.ts"],
+      "#children": ["src/children/index.ts"],
+      "#delays": ["src/delays/index.ts"],
+      "#states": ["src/states/index.ts"],
+      "#interpreters": ["src/interpreters/index.ts"],
+      "#interpreter": ["src/interpreters/interpreter.ts"],
+      "#guards": ["src/guards/index.ts"],
+      "#actions": ["src/actions/index.ts"],
+      "#events": ["src/events/index.ts"],
+      "#transitions": ["src/transitions/index.ts"],
+      "#emitters": ["src/emitters/index.ts"],
+      "#machine": ["src/machine/machine.ts"],
+      "#machines": ["src/machine/index.ts"],
+      "#config": ["src/config/index.ts"],
+      "#bemedev/*": ["src/libs/bemedev/*"]
     }
   }
 }
