--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bemedev/app-ts",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A reprogramming method to code better",
   "author": {
     "email": "bri_lvi@icloud.com",
@@ -83,8 +83,8 @@
     "@types/node": "24.10.1",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
-    "@vitest/coverage-v8": "4.0.10",
-    "eslint": "^9.39.1",
+    "@vitest/coverage-v8": "4.0.12",
+    "eslint": "9.39.1",
     "glob": "13.0.0",
     "globals": "16.5.0",
     "husky": "9.1.7",
@@ -96,7 +96,7 @@
     "tslib": "2.8.1",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
-    "vitest": "4.0.10"
+    "vitest": "4.0.12"
   },
   "dependencies": {
     "@bemedev/basifun": "0.5.3",
