--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bemedev/app-ts",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "A reprogramming method to code better",
   "author": {
     "email": "bri_lvi@icloud.com",
@@ -44,7 +44,7 @@
   "scripts": {
     "build": "pnpm run rm:lib && pnpm run rollup",
     "ci": "pnpm run config:off && pnpm run lint && pnpm run test",
-    "ci:admin": "pnpm run rm && pnpm run upgrade && pnpm run ci",
+    "ci:admin": "pnpm run rm && pnpm run upgrade:fast && pnpm run ci",
     "config": "pnpm install",
     "config:off": "pnpm run config --offline",
     "eslint": "eslint \"{src/**/*,App}.{ts,tsx}\"",
@@ -68,46 +68,47 @@
     "test:type": "pnpm run test:coverage -c \"vitest.config.type.ts\" --no-coverage",
     "test:type:watch": "vitest -c \"vitest.config.type.ts\"",
     "test:watch": "vitest",
-    "upgrade": "pnpm dlx @bemedev/upgrade-npm-package"
+    "upgrade": "pnpm dlx @bemedev/upgrade-npm-package && pnpm add -D @vitest/coverage-v8@3.2.4 vitest@3.2.4",
+    "upgrade:fast": "pnpm up --latest && pnpm add -D @vitest/coverage-v8@3.2.4 vitest@3.2.4"
   },
   "devDependencies": {
-    "@bemedev/build-tests": "0.1.2",
-    "@bemedev/fsf": "1.0.1",
-    "@bemedev/rollup-config": "0.2.2",
-    "@bemedev/vitest-alias": "0.0.3",
-    "@bemedev/vitest-exclude": "0.1.1",
-    "@bemedev/vitest-extended": "1.5.3",
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.39.1",
-    "@types/clone-deep": "4.0.4",
-    "@types/node": "24.10.1",
-    "@typescript-eslint/eslint-plugin": "8.47.0",
-    "@typescript-eslint/parser": "8.47.0",
-    "@vitest/coverage-v8": "4.0.12",
-    "eslint": "9.39.1",
-    "glob": "13.0.0",
-    "globals": "16.5.0",
-    "husky": "9.1.7",
-    "onchange": "7.1.0",
-    "prettier": "3.6.2",
-    "pretty-quick": "4.2.2",
-    "rollup": "4.53.3",
-    "rxjs": "7.8.2",
-    "tslib": "2.8.1",
-    "tsx": "4.20.6",
-    "typescript": "5.9.3",
-    "vitest": "4.0.12"
+    "@bemedev/build-tests": "^0.1.2",
+    "@bemedev/fsf": "^1.0.1",
+    "@bemedev/rollup-config": "^0.2.2",
+    "@bemedev/vitest-alias": "^0.0.3",
+    "@bemedev/vitest-exclude": "^0.1.1",
+    "@bemedev/vitest-extended": "^1.5.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
+    "@types/clone-deep": "^4.0.4",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.39.1",
+    "glob": "^13.0.0",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "onchange": "^7.1.0",
+    "prettier": "^3.6.2",
+    "pretty-quick": "^4.2.2",
+    "rollup": "^4.53.3",
+    "rxjs": "^7.8.2",
+    "tslib": "^2.8.1",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@bemedev/basifun": "0.5.3",
-    "@bemedev/boolean-recursive": "0.0.3",
-    "@bemedev/decompose": "1.3.1",
-    "@bemedev/interval2": "0.1.3",
-    "@bemedev/sleep": "0.1.2",
-    "clone-deep": "4.0.1",
-    "deepmerge-ts": "7.1.5",
-    "fast-deep-equal": "3.1.3",
-    "nanoid": "5.1.6"
+    "@bemedev/basifun": "^0.5.3",
+    "@bemedev/boolean-recursive": "^0.0.3",
+    "@bemedev/decompose": "^1.3.1",
+    "@bemedev/interval2": "^0.1.3",
+    "@bemedev/sleep": "^0.1.2",
+    "clone-deep": "^4.0.1",
+    "deepmerge-ts": "^7.1.5",
+    "fast-deep-equal": "^3.1.3",
+    "nanoid": "^5.1.6"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
